# parser-gibdd

./: README.md  Stat.gibdd based on basic requests.ipynb  cli.py  config.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml
docs/source/: conf.py  index.rst
lib/: __init__.py  api.py  convert.py  okato.py  okato_codes.py  parsers.py
lib/api/: crashes.py  okato.py
models/: crash.py  participant.py  region.py
parser_gibdd/: __init__.py  convert.py  exceptions.py  parsers.py  regions.py  utils.py
parser_gibdd/api/: convert.py  crashes.py  gibdd_api.py  okato.py  parsers.py  regions.py
parser_gibdd/api/gibdd/: crashes.py  okato.py
parser_gibdd/cli/: shell.py
parser_gibdd/gibdd_api/: api.py  converters.py  parsers.py  regions.py  request_handlers.py
parser_gibdd/interface/: declarative.py  shell.py
parser_gibdd/models/: crashes.py  participants.py  region.py  vehicles.py
parser_gibdd/models/gibdd/: crash.py  participant.py  requests.py  vehicle.py
src/: __init__.py  exceptions.py  gibdd_cli.py  utils.py
src/api/: convert.py  okato.py  parsers.py  regions.py
src/api/gibdd/: crashes.py  okato.py
src/models/: crash.py  region.py
src/models/gibdd/: crash.py  okato.py  region.py  vehicle.py
tests/: test_utils.py
tests/integration/: test_crashes.py  test_okato_codes.py
tests/test_api/: test_gibdd_api.py
tests/units/: test_okato_codes.py  test_utils.py
