[tool.poetry]
name = "parser-gibdd"
version = "0.1.0"
description = "Parser of gibbd data"
authors = ["Vlad Tabakov <agoner2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pydantic = "^1.6.1"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
pandas = "^1.1.2"
xlrd = "^1.2.0"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
